add Group relationship to Customer